# WindowsTaskManager

./: .gitignore  App.xaml  App.xaml.cs  Cargo.toml  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  Process.cs  ProcessTree.cs  ProcessTreeInterop.cs  WinTaskManager.csproj  WinTaskManager.sln  app.manifest
Properties/: launchSettings.json
src/: main.rs  process.rs
task_manager_lib/: Cargo.toml
task_manager_lib/src/: lib.rs  process.rs  process_tree.rs
