[package]
name = "Win_Task_Manager"
version = "0.1.0"
authors = ["Christos Lazaridis <clazaridis7@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.58", features = ["Win32_System_Diagnostics_ToolHelp", "Win32_Foundation"] }
winapi = { version = "0.3.9", features = ["minwinbase"] }