[package]
name = "task_manager_lib"
version = "0.1.0"
edition = "2021"
[lib]
name = "task_manager_lib"
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.58", features = ["Win32_System_Diagnostics_ToolHelp", "Win32_Foundation", "Win32_System_Threading"] }
winapi = { version = "0.3.9", features = ["minwinbase"] }
#serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.124"
bincode = "2.0.0-rc.3"